; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_sig.c___thr_sigwaitinfo.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_sig.c___thr_sigwaitinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pthread = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__thr_sigwaitinfo(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.pthread*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = call %struct.pthread* (...) @_get_curthread()
  store %struct.pthread* %8, %struct.pthread** %5, align 8
  %9 = load %struct.pthread*, %struct.pthread** %5, align 8
  %10 = call i32 @_thr_cancel_enter(%struct.pthread* %9)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @thr_remove_thr_signals(i32* %11, i32* %6)
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @__sys_sigwaitinfo(i32 %12, i32* %13)
  store i32 %14, i32* %7, align 4
  %15 = load %struct.pthread*, %struct.pthread** %5, align 8
  %16 = load i32, i32* %7, align 4
  %17 = icmp eq i32 %16, -1
  %18 = zext i1 %17 to i32
  %19 = call i32 @_thr_cancel_leave(%struct.pthread* %15, i32 %18)
  %20 = load i32, i32* %7, align 4
  ret i32 %20
}

declare dso_local %struct.pthread* @_get_curthread(...) #1

declare dso_local i32 @_thr_cancel_enter(%struct.pthread*) #1

declare dso_local i32 @__sys_sigwaitinfo(i32, i32*) #1

declare dso_local i32 @thr_remove_thr_signals(i32*, i32*) #1

declare dso_local i32 @_thr_cancel_leave(%struct.pthread*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
